<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carga Academica EISI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imagebutton_cargaacademica"></string>
    <string name="imagebutton_registromaterias">Registro Materias</string>
    <string name="texview_manuprincipal">Menu principal</string>
    <string name="textview_registro_materias">Registro Materias</string>
    <string name="menu_boton1">Administracion catalogos</string>
    <string name="menu_boton2">administracion docentes</string>
    <string name="menu_boton3">administracion Materias</string>
    <string name="menu_boton4">Administracion actividad Acad</string>
    <string name="menu_boton5">Gestion Carga Acad</string>
    <string name="title_activity_cargo">CargoActivity</string>
    <string name="title_activity_docente">DocenteActivity</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>

    <color name="rojo">#ff0000</color>

    <string name="title_activity_menu_ciclo">Gestion Tabla Ciclo</string>
    <string name="boton_menu_ciclo_insertar">Insertar Registro</string>
    <string name="boton_menu_ciclo_eliminar">Eliminar Registro</string>
    <string name="boton_menu_ciclo_actualizar">Actualizar Registro</string>
    <string name="boton_menu_ciclo_consultar">Consultar Registro</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <string name="title_activity_menu_gestion_carga_academica">Gestion de Carga Academica</string>
    <string name="Menu_GestionCargaAcad_boton1_Ciclo">Tabla Ciclo</string>
    <string name="Menu_GestionCargaAcad_boton2_CargaAcad">Tabla Carga_Academica</string>
    <string name="Menu_GestionCargaAcad_boton3_DetalleMat">Tabla Detalle_Carga_Materia</string>
    <string name="Menu_GestionCargaAcad_boton4_DetalleActAcad">Tabla Detalle_Carga_Actividades_Academicas</string>
    <string name="title_activity_ciclo_insertar">Ingresar Resgistros Tabla Ciclo</string>
    <string name="combobox_anio">Selecione Año del Ciclo</string>
    <string name="textview_selecioneanio_ciclo">Selecione el año</string>
    <string name="combobox_ciclo">Selecione el Ciclo</string>
    <string name="textview_selecione_ciclo">Selecione el Ciclo</string>
    <string name="title_activity_departamento">DepartamentoActivity</string>
    <string name="title_activity_area_materia">AreaMateriaActivity</string>
    <string name="title_activity_materia">MateriaActivity</string>
    <string name="title_activity_detalle_grupo_asignado">DetalleGrupoAsignadoActivity</string>

    <!-- Mario -->
    <string name="msgidDepto">Codigo del Departamento</string>
    <string name="msgNomDepto">Nombre del Departamento</string>
    <string name="tituloDepto">Nuevo Departamento</string>
    <string name="btnGuardarDepto">Guardar Departamento</string>
    <string name="btnLimpiaDepto">Limpiar Campos</string>
    <string name="nuevoDepto">Nuevo Departamento</string>
    <string name="title_activity_administracion_catalogos">AdministracionCatalogosActivity</string>
    <string name="title_activity_admon_depto">AdmonDeptoActivity</string>
    <string name="title_activity_insertar_depto">InsertarDeptoActivity</string>
    <string name="textview_fechaini">Fecha Inicio de Ciclo</string>
    <string name="textview_fechafin">Fecha Fin de Ciclo</string>
    <string name="button1_insertar_ciclo">Insertar</string>
    <string name="button2_limpiartexto_ciclo">Limpiar Texto</string>

</resources>