<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CicloInsertarActivity" >

 <TextView
     android:id="@+id/textView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/spinner_anio_ciclo"
     android:layout_alignParentTop="true"
     android:text="@string/textview_selecioneanio_ciclo"
     android:textAppearance="?android:attr/textAppearanceMedium" />

 <Spinner
     android:id="@+id/spinner_anio_ciclo"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/textView1"
     android:prompt="@string/combobox_anio" />

 <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/spinner_anio_ciclo"
     android:layout_below="@+id/spinner_anio_ciclo"
     android:text="@string/textview_selecione_ciclo"
     android:textAppearance="?android:attr/textAppearanceMedium" />

 <Spinner
     android:id="@+id/spinner_ciclo"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/textView2"
     android:layout_below="@+id/textView2"
     android:prompt="@string/combobox_ciclo" />

</RelativeLayout>