<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuGestionCargaAcademicaActivity" >

    <Button
        android:id="@+id/button1_ciclo_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="40dp"
        android:text="@string/Menu_GestionCargaAcad_boton1_Ciclo" />

    <Button
        android:id="@+id/button2_ciclo_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1_ciclo_insertar"
        android:layout_below="@+id/button1_ciclo_insertar"
        android:layout_marginTop="17dp"
        android:text="@string/Menu_GestionCargaAcad_boton2_CargaAcad" />

    <Button
        android:id="@+id/button3_ciclo_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2_ciclo_eliminar"
        android:layout_centerVertical="true"
        android:text="@string/Menu_GestionCargaAcad_boton3_DetalleMat" />

    <Button
        android:id="@+id/button4_tabla_det_carga_actacad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3_ciclo_actualizar"
        android:layout_below="@+id/button3_ciclo_actualizar"
        android:layout_marginTop="23dp"
        android:text="@string/Menu_GestionCargaAcad_boton4_DetalleActAcad" />

</RelativeLayout>